[gd_scene load_steps=17 format=3 uid="uid://bl22rtkqnj1s7"]

[ext_resource type="Script" path="res://scripts/MainGameScripts/EggScene/egg.gd" id="1_3gale"]
[ext_resource type="AudioStream" uid="uid://8ifwm2tjitur" path="res://sound_effects/yippee.mp3" id="2_rsge0"]
[ext_resource type="Texture2D" uid="uid://dy8kvuvwq45e0" path="res://images/egg/egg01.PNG" id="3_ijvvj"]
[ext_resource type="Texture2D" uid="uid://cb3y68flsjyc" path="res://images/creature_sprites/little-guy.png" id="4_5b41r"]
[ext_resource type="Texture2D" uid="uid://ddd55umdtwxcx" path="res://images/egg/egg02.PNG" id="4_cu5wo"]
[ext_resource type="Texture2D" uid="uid://4cfpam3be0g" path="res://images/creature_sprites/little-guy_2.png" id="5_6fl3y"]
[ext_resource type="Texture2D" uid="uid://do7dbsspir5oc" path="res://images/egg/egg03.PNG" id="5_vfgrm"]
[ext_resource type="Texture2D" uid="uid://6cg5s6yf1jrl" path="res://images/egg/egg04.PNG" id="6_eimtr"]
[ext_resource type="Texture2D" uid="uid://diwxdoruu1sob" path="res://images/creature_sprites/little-guy_3.png" id="6_ii2p7"]
[ext_resource type="Script" path="res://scripts/MainGameScripts/EggScene/party.gd" id="8_psxin"]
[ext_resource type="AudioStream" uid="uid://dnau787og6qky" path="res://sound_effects/EggCrack.wav" id="9_iuv6s"]
[ext_resource type="Theme" uid="uid://bkynhi7gd36bl" path="res://themes/menu_btn.tres" id="12_w52uh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_scja0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ijvvj")
}, {
"duration": 1.0,
"texture": ExtResource("4_cu5wo")
}, {
"duration": 1.0,
"texture": ExtResource("5_vfgrm")
}, {
"duration": 1.0,
"texture": ExtResource("6_eimtr")
}],
"loop": false,
"name": &"EggTime",
"speed": 2.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lmfc6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5b41r")
}, {
"duration": 1.0,
"texture": ExtResource("5_6fl3y")
}, {
"duration": 1.0,
"texture": ExtResource("6_ii2p7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_4r4vg"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.12381, 0.290476, 0.452381, 0.652381, 0.819048, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.482353, 0.321569, 1, 1, 1, 0, 1, 1, 0, 1, 1, 0, 1, 0.509804, 1, 0.529412, 0, 0.745098, 1, 1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_bccnn"]
script/source = "extends Button

func _on_button_down():
	get_tree().change_scene_to_file(\"res://scenes/GameScenes/prototype.tscn\")
"

[node name="Egg" type="Node2D"]
script = ExtResource("1_3gale")

[node name="Yip" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_rsge0")

[node name="EggSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(274, 356)
scale = Vector2(3, 2)
sprite_frames = SubResource("SpriteFrames_scja0")
animation = &"EggTime"
autoplay = "EggTime"
frame = 3
frame_progress = 1.0

[node name="LilGuy" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(266, 343)
scale = Vector2(0.215, 0.215)
sprite_frames = SubResource("SpriteFrames_lmfc6")
autoplay = "default"
frame_progress = 0.215938

[node name="StartGame" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="EggTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="Confetti" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("8_psxin")

[node name="ConfetL" type="CPUParticles2D" parent="Confetti"]
position = Vector2(92, 555)
emitting = false
amount = 15
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(0.1, -1)
spread = 6.0
initial_velocity_min = 500.0
initial_velocity_max = 900.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 15.0
color_initial_ramp = SubResource("Gradient_4r4vg")
hue_variation_min = 1.0
hue_variation_max = 1.0

[node name="ConfetR" type="CPUParticles2D" parent="Confetti"]
position = Vector2(446, 553)
emitting = false
amount = 15
lifetime = 2.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(-0.1, -1)
spread = 6.0
initial_velocity_min = 500.0
initial_velocity_max = 900.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
scale_amount_min = 10.0
scale_amount_max = 15.0
color_initial_ramp = SubResource("Gradient_4r4vg")
hue_variation_min = 1.0
hue_variation_max = 1.0

[node name="Crack" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_iuv6s")

[node name="Button" type="Button" parent="."]
offset_left = 181.0
offset_top = 528.0
offset_right = 359.0
offset_bottom = 621.0
theme = ExtResource("12_w52uh")
theme_override_font_sizes/font_size = 32
text = "SKIP"
script = SubResource("GDScript_bccnn")

[connection signal="button_down" from="Button" to="Button" method="_on_button_down"]
